syntax = "proto3";
package relay;

import "shared.proto";

option go_package = "github.com/keihaya-com/connet/pbr";

message AuthenticateReq {
  string token = 1;
  shared.HostPort addr = 2;
}

message AuthenticateResp {
  shared.Error error = 1;
  string control_id = 2;
}

enum ChangeType {
  ChangeUnknown = 0;
  ChangePut = 1;
  ChangeDel = 2;
}

message ClientsReq {
  int64 offset = 1;
}

message ClientsResp {
  repeated Change changes = 1;
  int64 offset = 2;
  bool restart = 3;

  message Change {
    shared.Forward destination = 1;
    shared.Forward source = 2;
    bytes client_certificate = 3;
    ChangeType change = 4;
  }
}

message ServersReq {
  int64 offset = 1;
}

message ServersResp {
  repeated Change changes = 1;
  int64 offset = 2;
  bool restart = 3;

  message Change {
    shared.Forward server = 1;
    bytes server_certificate = 2;
    ChangeType change = 3;
  }
}
