syntax = "proto3";
package relay;

import "proto.proto";
import "model.proto";

option go_package = "github.com/connet-dev/connet/proto/pbrelay";

message AuthenticateReq {
  string token = 1;
  model.HostPort addr = 2; // TODO remove in 0.9.0
  repeated model.HostPort addresses = 5;
  bytes reconnect_token = 3;
  string build_version = 4;
}

message AuthenticateResp {
  proto.Error error = 1;
  string control_id = 2;
  bytes reconnect_token = 3;
}

enum ChangeType {
  ChangeUnknown = 0;
  ChangePut = 1;
  ChangeDel = 2;
}

message ClientsReq {
  int64 offset = 1;
}

message ClientsResp {
  repeated Change changes = 1;
  int64 offset = 2;
  bool restart = 3;

  message Change {
    ChangeType change = 1;
    model.Forward forward = 2;
    model.Role role = 3;
    string certificate_key = 4;
    bytes certificate = 5;
  }
}

message ServersReq {
  int64 offset = 1;
}

message ServersResp {
  repeated Change changes = 1;
  int64 offset = 2;
  bool restart = 3;

  message Change {
    ChangeType change = 1;
    model.Forward forward = 2;
    bytes server_certificate = 3;
  }
}
